# bitcoin-encrypted-backup

./: .gitmodules  .justfile  Cargo.toml  README.md
.github/workflows/: main.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  parse_deriv_paths.rs  parse_encrypted_payload.rs  parse_individual_secrets.rs
src/: descriptor.rs  lib.rs  ll.rs
