[package]
name = "bitcoin-encrypted-backup"
version = "0.0.2"
edition = "2021"
readme = "README.md"
description = "Bitcoin Encrypted Backup"
documentation = "https://docs.rs/bitcoin-encrypted-backup"
license-file = "LICENSE"
repository = "https://github.com/pythcoiner/bitcoin-encrypted-backup"

[dependencies]
aes-gcm = {version = "0.10.3", default-features = false, features = ["aes", "alloc"]}
rand = {version = "0.9.2", optional = true}

#miniscript
mscript_12_3_5 = { version = "12.3.5", default-features = false, features = ["serde", "no-std"], package = "miniscript" , optional = true}
mscript_12_0 = { version = "12.0", default-features = false, features = ["serde", "no-std"], package = "miniscript" , optional = true}

# devices
async-hwi = {version = "0.0.29", optional = true}

# cli
clap = { version = "4.5.42", features = ["derive"] , optional = true}
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}

[dev-dependencies]
hex = "0.4.3"
rand = {version = "0.9.2"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "beb"
path = "src/bin/main.rs"
required-features = ["cli"]

[features]
default = ["miniscript_latest", "rand"]
rand = ["dep:rand"]
miniscript_latest = ["miniscript_12_3_5"]
miniscript_12_3_5 = ["mscript_12_3_5"]
miniscript_12_0 = ["mscript_12_0"]
tokio = ["dep:tokio"]
devices = ["dep:async-hwi", "tokio"]
cli = ["dep:clap", "tokio", "miniscript_latest", "rand"]
